k8s/minikube/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - name: gateway
    port: 4000
    targetPort: 4000
    protocol: TCP
