k8s/minikube/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  # namespace: development
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/add-base-url : "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: huddlehub.io
    http:
      paths:
      - pathType: Prefix
        path: /api/user(/|$)(.*)
        backend:
          service:
            name: user
            port:
              number: 3000
      - pathType: Prefix
        path: /api/auth(/|$)(.*)
        backend:
          service:
            name: auth
            port:
              number: 3000
